changed faucet code

--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -1470,10 +1470,10 @@ td.no_record img {
 }
 
 .radioButtons {
-  width: 38%;
+  width: 49%;
   border: 1px solid;
   margin: 10px auto !important;
-  padding: 1rem 0;
+  padding: 10px 0;
   justify-content: center;
   border-radius: 6px;
   box-sizing: border-box;
