major changes in flow

--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -441,7 +441,10 @@ ul {
     opacity: 0.8;
   }
 }
-
+// img.valMiniImage {
+//   border: 2px solid;
+//   border-radius: 50px;
+// }
 .white-btn {
   background-color: $grey-color-800;
   border-radius: 10px;
