--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3750,7 +3750,7 @@ input:-internal-autofill-selected {
           -webkit-transform: rotate(0deg);
           border-width: 13px 10px 0 10px;
           left: 40%;
-          top: 29px;
+          top: 97%px;
         }
 
         @media #{$max-sm} {
