--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3786,6 +3786,9 @@ input:-internal-autofill-selected {
     }
   }
 }
+.validator_table p.tb-value {
+  font-size: 14px;
+}
 .errorBoundary {
   background: white;
   width: 50%;
