--- a/public/assets/scss/pages/transactions.scss
+++ b/public/assets/scss/pages/transactions.scss
@@ -2,19 +2,20 @@
   padding: 32px 20px;
   background-color: $body-bg;
   border-radius: 40px;
-  margin-top: 50px;
+  margin-top: 15px;
   @media #{$max-lg} {
     padding: 24px 12px;
-    margin-top: 40px;
+    margin-top: 15px;
   }
   @media #{$max-md} {
     padding: 20px 8px;
-    margin-top: 30px;
+    margin-top: 14px;
   }
   @media #{$max-sm} {
-    margin-top: 20px;
+    margin-top: 13px;
   }
 }
+
 .overview_top_area {
   background-color: $grey-color;
   border-top-left-radius: 10px;
@@ -144,8 +145,8 @@
   margin-bottom: 10px;
 }
 .single_trns_row {
-  margin-top: 30px;
-  padding-bottom: 30px;
+  margin-top: 0px;
+  padding: 9px 0px;
   border-bottom: 1px solid $grey-color-800;
   @media #{$max-lg} {
     margin-top: 20px;
@@ -177,10 +178,10 @@
   }
 }
 .transactions_list_outr {
-  height: 300px;
+  height: 355px;
   overflow-y: auto;
   overflow-x: hidden;
-  margin-top: 30px;
+  margin-top: 18px;
 }
 
 .transactions_list_outr::-webkit-scrollbar {
@@ -304,7 +305,7 @@
 //   color: orange;
 // }
 .trnsc_outr {
-  margin-top: 32px;
+  margin-top: 0px;
   @media #{$max-lg} {
     margin-top: 16px;
   }
