--- a/public/assets/scss/core/withdraw.scss
+++ b/public/assets/scss/core/withdraw.scss
@@ -343,6 +343,7 @@
   justify-content: space-between;
   flex-direction: column;
   height: 100%;
+  min-height: 485px;
   // height:520px;
   // @media #{$max-xxl}{
   //     height: 440px;
